# observability-engineering

./: .gitignore  01_observability_engineering_foundation.md  02_observability_engineering_telemetry.md  README.md
knowledge/: 02_observability_engineering_telemetry.md  observability_engineering_overview.md
telemetry/: .pre-commit-config.yaml  README.md  pyproject.toml
telemetry/src/api/: main.py
telemetry/src/api/connectors/: azure_monitor.py  console_exporter.py  otlp_exporter.py
telemetry/src/api/core/: config.py  lifespan.py  logger.py  middleware.py
telemetry/src/api/decorators/: instrumentation.py
telemetry/src/api/dispatchers/: telemetry.py
telemetry/src/api/interfaces/: sampling_strategy.py  telemetry_exporter.py
telemetry/src/api/policies/: sampling.py
telemetry/src/api/routes/: api.py  demo.py  health.py
telemetry/src/config/: loader.py  settings.yaml
